--- a/app/src/main/res/layout/activity_trackemployee.xml
+++ b/app/src/main/res/layout/activity_trackemployee.xml
@@ -6,18 +6,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_marginHorizontal="5dp"
+    >
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
-    <!-- Material SearchBar for search functionality -->
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/search_bar_layout"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:queryHint="Search users"
-        android:background="@color/green"
-        />
+        android:layout_weight="0.75"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:boxStrokeColor="@color/black"
+        app:boxStrokeWidth="2dp"
+        app:hintEnabled="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/search_bar_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/baseline_search_24"
+            android:hint="Enter user name"
+
+            />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
+
+</androidx.constraintlayout.widget.ConstraintLayout>
     <!-- RecyclerView for displaying the list of users -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_users"
