--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,11 @@
         <item name="android:maxHeight">20dp</item>
     </style>
 
+    <!-- res/values/styles.xml -->
+    <style name="CustomSearchView" parent="Widget.AppCompat.SearchView">
+        <item name="queryHint">Search users</item>
+        <item name="android:textColorHint">@color/LoginBtn</item>
+        <item name="android:textColor">@color/red</item>
+    </style>
 
 </resources>
