--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -3,16 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:layout_margin="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyActivity">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/header_profile"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
         android:layout_marginTop="36dp"
         android:padding="10dp"
+        android:minWidth="96dp"
+        android:minHeight="96dp"
+        android:maxWidth="160dp"
+        android:maxHeight="160dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -32,6 +37,7 @@
 
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="@+id/header_profile"
         app:layout_constraintStart_toStartOf="@+id/header_profile"
         app:layout_constraintTop_toBottomOf="@+id/header_profile" />
@@ -155,11 +161,24 @@
                 app:layout_constraintEnd_toEndOf="@+id/home_checkout"
                 app:layout_constraintStart_toStartOf="@+id/home_checkout"
                 app:layout_constraintTop_toTopOf="@+id/office_checkin" />
-            />
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/circular_progress"
+android:elevation="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/main"
+app:layout_constraintTop_toTopOf="@id/main"
+        app:layout_constraintLeft_toLeftOf="@id/main"
+        app:layout_constraintRight_toRightOf="@id/main" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
